Added some.property and actuator refresh to all services

--- a/eureka-server.properties
+++ b/eureka-server.properties
@@ -1,11 +1,8 @@
 spring.application.name=eureka-server
 server.port=8761
+some.property=Hello from Eureka Server!
+management.endpoints.web.exposure.include=refresh
 
+# Since Eureka is a server, don't register it
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
-eureka.server.enable-self-preservation=false
-
-spring.datasource.hikari.initialization-fail-timeout=60000
-spring.datasource.hikari.connection-timeout=30000
-spring.datasource.hikari.maximum-pool-size=5
-spring.datasource.hikari.minimum-idle=2
