--- a/notification-service.properties
+++ b/notification-service.properties
@@ -1,26 +1,4 @@
 spring.application.name=notification-service
 server.port=8082
-
-spring.datasource.url=jdbc:mysql://mysql:3306/notificationdb?useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
-eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
-
-management.endpoints.web.exposure.include=*
-
-springdoc.api-docs.enabled=true
-springdoc.swagger-ui.enabled=true
-springdoc.swagger-ui.path=/swagger-ui.html
-
-spring.datasource.hikari.initialization-fail-timeout=60000
-spring.datasource.hikari.connection-timeout=30000
-spring.datasource.hikari.maximum-pool-size=5
-spring.datasource.hikari.minimum-idle=2
+some.property=Hello from Notification Service!
+management.endpoints.web.exposure.include=refresh
