--- a/user-service.properties
+++ b/user-service.properties
@@ -1,29 +1,4 @@
 spring.application.name=user-service
 server.port=8081
-
-spring.datasource.url=jdbc:mysql://mysql:3306/userdb?useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
-eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
-
-management.endpoints.web.exposure.include=*
-
-spring.datasource.hikari.initialization-fail-timeout=60000
-spring.datasource.hikari.connection-timeout=30000
-spring.datasource.hikari.maximum-pool-size=5
-spring.datasource.hikari.minimum-idle=2
-
-# Swagger Gateway Rewrite (only needed here if springdoc is present)
-spring.cloud.gateway.routes[1].id=user-service-swagger-ui
-spring.cloud.gateway.routes[1].uri=lb://user-service
-spring.cloud.gateway.routes[1].predicates[0]=Path=/users/swagger-ui/**
-spring.cloud.gateway.routes[1].predicates[1]=Path=/users/swagger-ui.html
-spring.cloud.gateway.routes[1].filters[0]=RewritePath=/users(?<segment>/?.*), ${segment}
+some.property=Hello from User Service!
+management.endpoints.web.exposure.include=refresh
